--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -49,7 +49,8 @@ security:
             switch_user: true
 
     role_hierarchy:
-        ROLE_ADMIN: ROLE_USER
+        ROLE_MODERATOR: ROLE_USER
+        ROLE_ADMIN: ROLE_MODERATOR
         ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     # Easy way to control access for large sections of your site
