--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -17,3 +17,16 @@ vich_uploader:
                 options:
                     date_time_format: 'Y-d-m'
                     date_time_property: updatedAt
+
+        tech_picture:
+            uri_prefix: /media/tech
+            upload_destination: '%kernel.project_dir%/public/media/tech'
+            namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+            inject_on_load: false
+            delete_on_update: true
+            delete_on_remove: true
+            directory_namer:
+                service: Vich\UploaderBundle\Naming\CurrentDateTimeDirectoryNamer
+                options:
+                    date_time_format: 'Y-d-m'
+                    date_time_property: updatedAt
