--- a/.env
+++ b/.env
@@ -56,6 +56,7 @@ DEFAULT_LOCALE=en
 
 ###> assets ###
 BLUR_DEFAULT_FALLBACK=/media/default_blur_fallback.jpg
+NO_PICTURE_FALLBACK=/media/no_picture_fallback.jpg
 ###< assets ###
 
 ###> meilisearch ###
