--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,45 +20,16 @@ jobs:
       - name: Fetch all tags
         run: git fetch --force --tags
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        
-      - name: Login Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # Maybe use Github Package
-      
-      #  name: Login to GitHub Container Registry
-      #   uses: docker/login-action@v2
-      #   with:
-      #     registry: ghcr.io
-      #     username: ${{ github.repository_owner }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: ./docker/prod/
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/stack-up
-
       - name: Login server and up app
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
-          script: sh app/deployement.sh
+          script: |
+            cd app && \
+            make deploy
 
         env:
           GITHUB_TOKEN: ${{ secrets.PUBLISHER_TOKEN }}
-          DOCKER_CLI_EXPERIMENTAL: "enabled"
