--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "symfony/http-client": "6.2.*",
     "symfony/intl": "6.2.*",
     "symfony/mailer": "6.2.*",
+    "symfony/mailjet-mailer": "6.2.*",
     "symfony/mercure-bundle": "^0.3.5",
     "symfony/mime": "6.2.*",
     "symfony/monolog-bundle": "^3.0",
