--- a/config/packages/meilisearch.yaml
+++ b/config/packages/meilisearch.yaml
@@ -3,6 +3,19 @@ meilisearch:
     api_key: '%env(MEILISEARCH_MASTER_KEY)%'
     prefix: '%env(APP_ENV)%_'
     indices:
+        - name: techs
+          class: App\Entity\Tech
+          enable_serializer_groups: true
+          index_if: isIndexable
+          settings:
+              searchableAttributes: ['name', 'slug', 'description', 'picture']
+
+        - name: stacks
+          class: App\Entity\Stack
+          enable_serializer_groups: true
+          settings:
+              searchableAttributes: ['name', 'slug', 'description']
+
         - name: profiles
           class: App\Entity\Profile
           enable_serializer_groups: true
