--- a/.env
+++ b/.env
@@ -30,8 +30,8 @@ MESSENGER_TRANSPORT_DSN=amqp://guest:guest@rabbitmq:5672/%2f/messages
 
 ###> symfony/mailer ###
 MAILER_DSN=smtp://mailcatcher:1025
-MAILER_NOREPLY_EMAIL=noreply@my-domain.com
-MAILER_NOREPLY_NAME=noreply
+MAILER_NOREPLY_EMAIL=noreply@stack-up.com
+MAILER_NOREPLY_NAME=StackUp
 ###< symfony/mailer ###
 
 ###> redis ###
