--- a/docker/dev/nginx/nginx.conf
+++ b/docker/dev/nginx/nginx.conf
@@ -55,6 +55,10 @@ http {
         root /app/public;
         index index.php;
 
+        location = / {
+            return 301 http://$host/en;
+        }
+
         location / {
             try_files $uri /index.php$is_args$args;
         }
