Fixed routing for prod

--- a/.env
+++ b/.env
@@ -17,6 +17,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=72d56b67b19b188e423e1b156365519e
+APP_DEFAULT_URI=http://localhost
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
