Fixed many things

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     restart: unless-stopped
     ports:
       - 80:80
+      - 3000:3000
     volumes:
       - ./public:/app/public
       - ./docker/dev/nginx/logs:/var/log/nginx
@@ -124,15 +125,15 @@ services:
     restart: unless-stopped
     environment:
       # Uncomment the following line to disable HTTPS
-      SERVER_NAME: ":80"
+      SERVER_NAME: ":3000"
       MERCURE_PUBLISHER_JWT_KEY: "${MERCURE_JWT_SECRET:?err}"
       MERCURE_SUBSCRIBER_JWT_KEY: "${MERCURE_JWT_SECRET:?err}"
+      MERCURE_EXTRA_DIRECTIVES: |
+        cors_origins http://localhost
+        use_forwarded_headers "1"
     # Uncomment the following line to enable the development mode
     command: /usr/bin/caddy run --config /etc/caddy/Caddyfile.dev
     container_name: su-mercure
-    ports:
-      - 3000:80
-      # - 443:443
     volumes:
       - ./data/mercure/data:/data
       - ./data/mercure/config:/config
