--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,9 +61,8 @@ services:
     image: mariadb:10.10.2
     restart: unless-stopped
     container_name: su-db
-    # TODO look into it, seems to not work properly
-    # volumes:
-    #   - ./data/mysql:/var/lib/mysql/data
+    volumes:
+      - ./data/mysql:/var/lib/mysql
     environment:
       MARIADB_ROOT_PASSWORD: "${MARIADB_ROOT_PASSWORD:?err}"
     healthcheck:
