--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,9 +32,11 @@ services:
       db:
         condition: service_healthy
       rabbitmq:
-        condition: service_started
+        condition: service_healthy
       redis:
-        condition: service_started
+        condition: service_healthy
+      meilisearch:
+        condition: service_healthy
     healthcheck:
       test: [ "CMD", "php", "-v" ]
       timeout: 30s
@@ -54,7 +56,7 @@ services:
       - 9090:9090
     depends_on:
       php:
-        condition: service_started
+        condition: service_healthy
     container_name: su-encore
 
   db:
@@ -95,6 +97,11 @@ services:
     image: rabbitmq:3-management
     restart: unless-stopped
     container_name: su-rabbitmq
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      timeout: 30s
+      interval: 2s
+      retries: 30
     ports:
       - 15672:15672
 
@@ -103,6 +110,11 @@ services:
     restart: unless-stopped
     command: "redis-server --save 20 1 --loglevel warning --maxmemory 100mb --maxmemory-policy allkeys-lru --requirepass ${REDIS_AUTH:?err}"
     container_name: su-redis
+    healthcheck:
+      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+      timeout: 30s
+      interval: 2s
+      retries: 30
     volumes:
       - ./data/cache/redis:/data
 
@@ -115,7 +127,7 @@ services:
       REDIS_HOSTS: "local:redis:6379:0:${REDIS_AUTH:?err}"
     depends_on:
       redis:
-        condition: service_started
+        condition: service_healthy
     ports:
       - "8081:8081"
 
@@ -145,5 +157,10 @@ services:
       - 7700:7700
     volumes:
       - ./data/meilisearch:/meili_data
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:7700/health || exit 1
+      timeout: 30s
+      interval: 2s
+      retries: 30
     environment:
       MEILI_MASTER_KEY: "${MEILISEARCH_MASTER_KEY:?err}"
